<?xml version="1.0"?>
<package format="2">
    <name>anman_robotbase</name>
    <version>0.1.0</version>
    <description>The anman_robotbase package</description>

    <author email="sweilz.w@gmail.com">Liews Wuttipat</author>
    <maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>serial</build_depend>
    <build_depend>tf</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>serial</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>serial</exec_depend>
    <exec_depend>tf</exec_depend>

</package>
